Added css to the code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever GitHUb Repository</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>My First Ever GitHub Repository</h2>
+        <p>My first ever GitHub repository is now live</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum unde sit iusto dolore nemo inventore. Veritatis optio minima cumque sapiente cupiditate neque perferendis perspiciatis. Ut recusandae nulla iusto unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam omnis quos provident magnam. In, sunt exercitationem, omnis, consequuntur totam eveniet mollitia illo veniam praesentium nam earum debitis impedit asperiores harum!</p>
+    </div>
+    <div>
+        <h2>My First Ever GitHub Repository</h2>
+        <p>My first ever GitHub repository is now live</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum unde sit iusto dolore nemo inventore. Veritatis optio minima cumque sapiente cupiditate neque perferendis perspiciatis. Ut recusandae nulla iusto unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam omnis quos provident magnam. In, sunt exercitationem, omnis, consequuntur totam eveniet mollitia illo veniam praesentium nam earum debitis impedit asperiores harum!</p>
+    </div>
+    <div>
+        <h2>My First Ever GitHub Repository</h2>
+        <p>My first ever GitHub repository is now live</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum unde sit iusto dolore nemo inventore. Veritatis optio minima cumque sapiente cupiditate neque perferendis perspiciatis. Ut recusandae nulla iusto unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam omnis quos provident magnam. In, sunt exercitationem, omnis, consequuntur totam eveniet mollitia illo veniam praesentium nam earum debitis impedit asperiores harum!</p>
+    </div>
 </body>
 </html>
